[gd_scene load_steps=3 format=3 uid="uid://dialogue_test"]

[ext_resource type="PackedScene" uid="uid://dialogue_box" path="res://scenes/ui/dialogue_box.tscn" id="1_dialogue_box"]
[ext_resource type="Script" path="res://scripts/dialogue_test.gd" id="2_dialogue_test_script"]

[node name="DialogueTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_dialogue_test_script")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.25, 0.3, 1)

[node name="TestButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="TestButtons"]
layout_mode = 2
text = "Dialogue System Test"
horizontal_alignment = 1

[node name="StartSimpleDialogue" type="Button" parent="TestButtons"]
layout_mode = 2
text = "Start Simple Dialogue"

[node name="StartChoiceDialogue" type="Button" parent="TestButtons"]
layout_mode = 2
text = "Start Choice Dialogue"

[node name="StartChainDialogue" type="Button" parent="TestButtons"]
layout_mode = 2
text = "Start Chain Dialogue"

[node name="DialogueBox" parent="." instance=ExtResource("1_dialogue_box")]

[connection signal="pressed" from="TestButtons/StartSimpleDialogue" to="." method="_on_start_simple_dialogue_pressed"]
[connection signal="pressed" from="TestButtons/StartChoiceDialogue" to="." method="_on_start_choice_dialogue_pressed"]
[connection signal="pressed" from="TestButtons/StartChainDialogue" to="." method="_on_start_chain_dialogue_pressed"]
